--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
           const leafletPolygon = L.polygon(coordinates, {
             color: getColorForZone(zone),
             fillColor: getColorForZone(zone),
-            fillOpacity: 0.3, // Ajuste de opacidad para mayor visibilidad del mapa
+            fillOpacity: 0.4, // Ajuste de opacidad para mayor visibilidad del mapa
             weight: 2
           }).addTo(polygonLayer);
 
@@ -328,7 +328,7 @@
             this.setStyle({
               weight: 5,
               color: '#666',
-              fillOpacity: 0.5, // Al aumentar hover, dar más visibilidad al polígono
+              fillOpacity: 0.6, // Al aumentar hover, dar más visibilidad al polígono
               fillColor: getColorForZone(zone)
             });
           });
@@ -337,7 +337,7 @@
             this.setStyle({
               weight: 2,
               color: getColorForZone(zone),
-              fillOpacity: 0.3  // Restaurar opacidad al salir del hover
+              fillOpacity: 0.4  // Restaurar opacidad al salir del hover
             });
           });
 
@@ -366,10 +366,10 @@
     // Generar colores suaves para cada zona
     const zoneColors = {};
     const colorsPalette = [
-      '#87CEFA', '#90EE90', '#FFFACD', '#FFC0CB', '#E6E6FA', '#98FF98',
-      '#FFDAB9', '#F5F5DC', '#DDA0DD', '#AFEEEE', '#B0E0E6', '#E0FFFF', 
-      '#F0E68C', '#FFE4E1', '#FAFAD2', '#D8BFD8', '#E0FFFF', '#F5DEB3', 
-      '#FFEBCD', '#FFDAB9', '#F0FFF0', '#FAEBD7', '#FFB6C1', '#FFF0F5', '#FFEFD5'
+      '#87CEEB', '#FF7F50', '#32CD32', '#FFD700', '#FF69B4', '#6A5ACD',
+      '#40E0D0', '#DA70D6', '#FFA07A', '#8FBC8B', '#00CED1', '#BDB76B', 
+      '#FF6347', '#4682B4', '#D2B48C', '#CD5C5C', '#F08080', '#20B2AA', 
+      '#66CDAA', '#9370DB', '#FF4500', '#F4A460', '#2E8B57', '#6B8E23', '#BA55D3'
     ];
 
     function getColorForZone(zone) {
