--- a/index.html
+++ b/index.html
@@ -306,6 +306,17 @@
       const zoneColumn = vInicialSwitch.checked ? 'ZE. Zona de Explotación' : 'Nueva Zona';
       const polizaColumn = vInicialSwitch.checked ? 'Pol. ZE. Zona de Explotación' : 'Pol. Nueva Zona';
 
+      // Lista de colores predeterminados sin repetición
+      const colorsPalette = [
+        '#87CEEB', '#FF7F50', '#32CD32', '#FFD700', '#FF69B4', '#6A5ACD',
+        '#40E0D0', '#DA70D6', '#FFA07A', '#8FBC8B', '#00CED1', '#BDB76B', 
+        '#FF6347', '#4682B4', '#D2B48C', '#CD5C5C', '#F08080', '#20B2AA', 
+        '#66CDAA', '#9370DB', '#FF4500', '#F4A460', '#2E8B57', '#6B8E23', '#BA55D3'
+      ];
+
+      let usedColors = {}; // Almacenará los colores ya utilizados
+      let colorIndex = 0;  // Índice para recorrer la paleta de colores
+
       data.forEach(function(row) {
         try {
           const polygonData = JSON.parse(row['Poligon']);
@@ -316,9 +327,15 @@
 
           const coordinates = polygonData.coordinates[0].map(coord => [coord[1], coord[0]]); // Invertir latitud y longitud
 
+          // Asignar color único a la zona
+          if (!usedColors[zone]) {
+            usedColors[zone] = colorsPalette[colorIndex];
+            colorIndex = (colorIndex + 1) % colorsPalette.length;
+          }
+
           const leafletPolygon = L.polygon(coordinates, {
-            color: getColorForZone(zone),
-            fillColor: getColorForZone(zone),
+            color: usedColors[zone],
+            fillColor: usedColors[zone],
             fillOpacity: 0.4, // Ajuste de opacidad para mayor visibilidad del mapa
             weight: 2
           }).addTo(polygonLayer);
@@ -329,14 +346,14 @@
               weight: 5,
               color: '#666',
               fillOpacity: 0.6, // Al aumentar hover, dar más visibilidad al polígono
-              fillColor: getColorForZone(zone)
+              fillColor: usedColors[zone]
             });
           });
 
           leafletPolygon.on('mouseout', function () {
             this.setStyle({
               weight: 2,
-              color: getColorForZone(zone),
+              color: usedColors[zone],
               fillOpacity: 0.4  // Restaurar opacidad al salir del hover
             });
           });
@@ -361,23 +378,6 @@
     // Limpiar los polígonos del mapa
     function clearMap() {
       polygonLayer.clearLayers();  // Elimina todos los polígonos existentes antes de agregar nuevos
-    }
-
-    // Generar colores suaves para cada zona
-    const zoneColors = {};
-    const colorsPalette = [
-      '#87CEEB', '#FF7F50', '#32CD32', '#FFD700', '#FF69B4', '#6A5ACD',
-      '#40E0D0', '#DA70D6', '#FFA07A', '#8FBC8B', '#00CED1', '#BDB76B', 
-      '#FF6347', '#4682B4', '#D2B48C', '#CD5C5C', '#F08080', '#20B2AA', 
-      '#66CDAA', '#9370DB', '#FF4500', '#F4A460', '#2E8B57', '#6B8E23', '#BA55D3'
-    ];
-
-    function getColorForZone(zone) {
-      if (!zoneColors[zone]) {
-        const randomColor = colorsPalette[Math.floor(Math.random() * colorsPalette.length)];
-        zoneColors[zone] = randomColor;
-      }
-      return zoneColors[zone];
     }
 
     function toggleSidebar() {
