--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
       vertical-align: middle;
     }
 
+    /* Botón de acción de la leyenda ajustado a un tamaño más pequeño */
     .toggle-legend-btn {
       position: fixed;
       bottom: 0;
@@ -241,11 +242,11 @@
       transform: translateX(-50%);
       background-color: #3498db;
       color: white;
-      padding: 10px 15px;
+      padding: 6px 10px; /* Tamaño reducido */
       border: none;
-      border-radius: 18px;
+      border-radius: 15px;
       cursor: pointer;
-      font-size: 14px;
+      font-size: 12px; /* Fuente más pequeña */
       margin-bottom: 10px;
       z-index: 1100;
     }
