--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      background-color: #ffffff;
+      background-color: #f0f0f0; /* Cambiado a un gris muy claro */
       box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.1);
       padding: 15px;
       text-align: center;
       transition: transform 0.3s ease;
       transform: translateY(100%); /* Oculto inicialmente */
       z-index: 1000;
-      border-top: 2px solid #f4f4f9;
+      border-top: 2px solid #e0e0e0;
     }
 
     .legend-panel.visible {
